--- a/answers/1.3
+++ b/answers/1.3
@@ -1,6 +1,2 @@
-FROM python:3.8-slim
-WORKDIR /app
-COPY requirements.txt .
-RUN pip install -r requirements.txt
-COPY . .
-CMD ["python3", "-m", "flask", "run", "--host=0.0.0.0"]
+docker build -t tp .
+docker run -p 5000:5000 -e CURRENT_ENVIRONMENT=production tp
