--- a/answers/1.5
+++ b/answers/1.5
@@ -1,2 +1,2 @@
-docker stop 0403e77c4ed2
-docker run -p 5000:5000 -e CURRENT_ENVIRONMENT=developement tp tp
+
+docker run -d -p 5000:5000 --name tp -e CURRENT_ENVIRONMENT=development tp
