--- a/answers/1.8
+++ b/answers/1.8
@@ -1,3 +1,3 @@
 docker stop tp
 docker rm tp
-docker run -p 5000:5000 -e CURRENT_ENVIRONMENT=production --name app -d brahim9327/oui:latest
+docker run -p 5000:5000 -e CURRENT_ENVIRONMENT=production --name app -d brahim9327/oui:v1
