--- a/answers/1.9.2
+++ b/answers/1.9.2
@@ -1,3 +1,3 @@
 docker stop app
 docker rename app cont
-docker start cont
+docker run -p 5000:5000 -e CURRENT_ENVIRONMENT=production --name cont -d brahim9327/oui:v1
